3module/module_three.tf
#VARIABLES

variable "aws_access_key" {}
variable "aws_secret_key" {}
variable "private_key_path" {}
variable "key_name" {}
variable "region" {
  default = "us-west-2"
}

#PROVIDERS

 provider "aws" {
  access_key = var.aws_access_key
  secret_key = var.aws_secret_key
  region = var.region
 }

#DATA
#Below figures out what is the most recent AWS-LINUX AMI available

data "aws_ami" "aws-linux" {
  most_recent = true
  owners = ["amazon"]

  filter {
    name = "name"
    values = ["amzn-ami-hvm*"]
  }

  filter {
    name = "root-device-type"
    values = ["ebs"]
  }

  filter {
    name = "virtualization-type"
    values = ["hvm"]
  }
}

#RESOURCES

resource "aws_default_vpc" "default" {

}

resource "aws_security_group" "allow_ssh" {
  name = "nginx_demo"
  description = "Allow ports for nginx demo"
  vpc_id = aws_default_vpc.default.id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks =["0.0.0.0/0"]
  }
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
#ami variable below gets the ami from the data block we created above
#var.key_name is the key_name we are passing in from our variable file
#security group is expected to be in a list so we have to have the []
resource "aws_instance" "nginx" {
  ami = data.aws_ami.aws-linux.id
  instance_type = "t2.micro"
  key_name = var.key_name
  vpc_security_group_ids = [aws_security_group.allow_ssh.id]
#connection below is to allow us to SSH into instance
#self.public_ip is a way for us to get the IP address of this resource
#file() for private_key is a function that gets the private key
  connection {
    type = "ssh"
    host = self.public_ip
    user = "ec2-user"
    private_key = file(var.private_key_path)
  }
#provisioner below we ar eusing is remote-exec
#it allows us to run commands like on a terminal in the instance
#we are installing nginx and starting it
  provisioner "remote-exec" {
    inline = [
      "sudo yum install nginx -y",
      "sudo service nginx start"
    ]
  }
}

#OUTPUT
#output is what we want terraform to output once instance has been
#instantiated
output "aws_instance_public_dns" {
  value = aws_instance.nginx.public_dns
}
